--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-cd.yml
 name: Go Auth API CI/CD Pipeline
 
 on:
@@ -96,12 +95,19 @@ jobs:
       DOCKER_BUILDKIT: 1
 
     outputs:
+      short-sha: ${{ steps.vars.outputs.short-sha }}
       image-tag: ${{ steps.meta.outputs.tags }}
-      image-digest: ${{ steps.build.outputs.digest }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set variables
+        id: vars
+        run: |
+          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          echo "short-sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
+          echo "Short SHA: ${SHORT_SHA}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -119,9 +125,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,format=short
+            type=raw,value=${{ steps.vars.outputs.short-sha }}
             type=raw,value=latest,enable={{is_default_branch}}
           labels: |
             org.opencontainers.image.title=Go Auth API
@@ -148,7 +152,6 @@ jobs:
   update-manifests:
     needs: build-and-push
     runs-on: ubuntu-latest
-    timeout-minutes: 5
     env:
       GITOPS_REPO: ${{ github.repository_owner }}/go-auth-k8s-manifests
       GITOPS_BRANCH: main
@@ -162,75 +165,40 @@ jobs:
           path: gitops
           ref: ${{ env.GITOPS_BRANCH }}
 
-      - name: Install yq
-        run: |
-          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64
-          sudo chmod +x /usr/local/bin/yq
-
-      - name: Update manifests with image digest
+      - name: Update image tag
         run: |
           cd gitops
-          set -euo pipefail
 
-          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
-          DIGEST="${{ needs.build-and-push.outputs.image-digest }}"
+          SHORT_SHA="${{ needs.build-and-push.outputs.short-sha }}"
 
-          # Normalize image name to lowercase to match kustomize manifests and export for yq
-          IMAGE=$(echo "$IMAGE" | tr '[:upper:]' '[:lower:]')
-          export IMAGE DIGEST
+          echo "Updating image tag to: ${SHORT_SHA}"
 
-          echo "Image: $IMAGE"
-          echo "Digest: $DIGEST"
-
-          if [ -z "$DIGEST" ]; then
-            echo "Image digest is empty; aborting."
+          # Update kustomization.yaml with the short SHA
+          if [ ! -f overlays/production/kustomization.yaml ]; then
+            echo "Error: overlays/production/kustomization.yaml does not exist."
             exit 1
           fi
 
-          FILE="overlays/production/kustomization.yaml"
-
-          # Show current file content
-          echo "=== Current kustomization.yaml ==="
-          cat "$FILE"
-
-          # Check if images array exists
-          if ! yq -e '.images' "$FILE" >/dev/null 2>&1; then
-            yq -i '.images = []' "$FILE"
+          if grep -q "newTag:" overlays/production/kustomization.yaml; then
+            # Replace the existing newTag value with the new SHA
+            sed -i "s|newTag:.*|newTag: ${SHORT_SHA}|g" overlays/production/kustomization.yaml
+          else
+            # Add newTag under the go-auth-api image entry if it doesn't exist
+            # This assumes the image block exists and is properly formatted
+            sed -i '/name:.*go-auth-api/a\  newTag: '"${SHORT_SHA}"'' overlays/production/kustomization.yaml
           fi
 
-          # Remove any existing entries for this image name and add new one with digest
-          yq -i "
-            .images = (.images // []) |
-            map(select(.name != env(IMAGE))) +
-            [{\"name\": env(IMAGE), \"digest\": env(DIGEST)}]
-          " "$FILE"
-
-          echo "=== Updated kustomization.yaml ==="
-          cat "$FILE"
-
-          # Validate the YAML is still valid
-          if ! yq eval '.' "$FILE" >/dev/null 2>&1; then
-            echo "ERROR: Generated invalid YAML"
-            exit 1
-          fi
-
-          # Check if there are changes to commit
-          if git diff --quiet; then
-            echo "No changes detected in manifests"
-            exit 0
-          fi
-
-          # Configure git
+          echo "Updated kustomization.yaml:"
+          cat overlays/production/kustomization.yaml
           git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git config user.name github-actions
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git add overlays/production/kustomization.yaml
 
-          echo "=== Changes detected ==="
-          git diff
-
-          # Commit and push changes
-          git add "$FILE"
-          git commit -m "chore(gitops): update go-auth-api image digest
-
-          Source commit: ${{ github.sha }}
-          Image: $IMAGE@$DIGEST"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update go-auth-api image to ${SHORT_SHA}"
+            git push
+          fi
